CV2ANDRIOD-547 Dashboard Reserve Release Api integration.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -645,5 +645,6 @@
     <string name="withdraw_tokens">Withdraw Tokens</string>
     <string name="cyn_under_payout">(CYN)</string>
     <string name="avail_bal">12132.2323</string>
+    <string name="full_payouts_history">Full Payouts History</string>
 
 </resources>
