CV2ANDRIOD-548 Paid Order Transaction Details Completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -651,6 +651,6 @@
     <string name="merchant_account_id">Merchant Account ID</string>
     <string name="dba_name_text">DBA Name</string>
     <string name="customer_service_phone">Customer Service Phone</string>
-    <string name="description">If you are experiencing any issues with your transaction please contact the merchant on file or contact “coyni” customer service by click</string>
+    <string name="description">If you are experiencing any issues with your transaction please contact the merchant on file or contact “coyni” customer service by click Get Help </string>
 
 </resources>
