--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -387,8 +387,8 @@
     <string name="cyn">CYN</string>
     <string name="_1d3hsm734h"><u>1d3hsM734h…</u></string>
     <color name="background_color">#8ef2f5f8</color>
-    <string name="rolling_reserves_with_a_rolling_reserve"><b>ROLLING RESERVES:</b> With a rolling reserve</string>
-    <string name="manually_reserves"><b>MANUALLY RESERVES:</b> Withdrawing money</string>
+    <string name="rolling_reserves_with_a_rolling_reserve">ROLLING RESERVES: With a rolling reserve</string>
+    <string name="manually_reserves">MANUALLY RESERVES: Withdrawing money</string>
     <string name="new_company">New Company</string>
     <string name="new_dba">New DBA</string>
     <string name="add_dba">Add DBA</string>
