--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -362,12 +362,12 @@
     <string name="decline_reserve_rules_message">Are you sure you want to decline this reserve rule and cancel your merchant application? You will need to complete another application to apply again.</string>
     <string name="no_go_back">No, go back</string>
     <string name="verification_failed">Verification Failed</string>
-    <string name="dear_name">Dear [%1$s],</string>
+    <string name="dear_name">Dear %1$s,</string>
     <string name="accept">Accept</string>
     <string name="decline">Decline</string>
     <string name="interest_in_coyni_merchant_application">Thank you for your interest in merchant processing through coyni. However, we regret to inform you that your application has not been approved and is no longer in consideration.</string>
-    <string name="legal_name_name">Legal Name:[%1$s]</string>
-    <string name="verification_dba_name">DBA: [%1$s]</string>
+    <string name="legal_name_name">Legal Name: %1$s</string>
+    <string name="verification_dba_name">DBA: %1$s</string>
     <string name="we_thank_for_interest">Again, we thank you for your interest and wish you the best of luck.</string>
     <string name="documents_required">Documents Required</string>
     <string name="copy_of_social_security_card">Copy of Social Security card</string>
