--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -670,6 +670,7 @@
     <string name="thank_you_for_your_interest_in_coyni_after_ncarefully_reviewing_the_coyni_team_made_ndecision_to_approve_your_application_with">Thank you for your interest in coyni. After\ncarefully reviewing. The coyni team made\ndecision to approve your application with</string>
     <string name="reserve_conditions">reserve conditions.</string>
     <string name="hi_text">Hi!\u0020</string>
+    <string name="not_available_description">We’re sorry but this feature currently is not available, please wait until we finish your identity verification.</string>
 
 
 </resources>
