--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -365,10 +365,10 @@
     <string name="dear_name">Dear %1$s,</string>
     <string name="accept">Accept</string>
     <string name="decline">Decline</string>
-    <string name="interest_in_coyni_merchant_application">Thank you for your interest in merchant processing through coyni. However, we regret to inform you that your application has not been approved and is no longer in consideration.</string>
+    <string name="interest_in_coyni_merchant_application">Thank you for your interest in merchant \nprocessing through coyni.However, we regret to \ninform you that your application has not been \napproved and is no longer in consideration.</string>
     <string name="legal_name_name">Legal Name: %1$s</string>
     <string name="verification_dba_name">DBA: %1$s</string>
-    <string name="we_thank_for_interest">Again, we thank you for your interest and wish you the best of luck.</string>
+    <string name="we_thank_for_interest">Again, we thank you for your interest and wish \nyou the best of luck.</string>
     <string name="documents_required">Documents Required</string>
     <string name="copy_of_social_security_card">Copy of Social Security card</string>
     <string name="upload_file">Upload File</string>
@@ -672,6 +672,7 @@
     <string name="reason">Enter the reason of decline here.(Maximum 120 characters)</string>
     <string name="hi_text">Hi!\u0020</string>
     <string name="not_available_description">We’re sorry but this feature currently is not available, please wait until we finish your identity verification.</string>
+    <string name="application_declined">Application Declined</string>
 
 
 </resources>
