--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -673,6 +673,7 @@
     <string name="hi_text">Hi!\u0020</string>
     <string name="not_available_description">We’re sorry but this feature currently is not available, please wait until we finish your identity verification.</string>
     <string name="application_declined">Application Declined</string>
+    <string name="please_click_the_upload_button_below_to_proceed">Please click the “Upload” button below to proceed.</string>
 
 
 </resources>
