--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -677,6 +677,7 @@
     <string name="please_click_the_upload_button_below_to_proceed">Please click the “Upload” button below to proceed.</string>
     <string name="canceled_text">Application Canceled</string>
     <string name="declined_text">Application Declined</string>
+    <string name="default_notification_channel_id">Channel ID</string>
 
 
 </resources>
