--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -255,7 +255,7 @@
     <string name="Ownership">Ownership %</string>
     <string name="expirydate">60</string>
     <string name="AB_owners">Additional Beneficial Owner(s)</string>
-    <string name="Beneficialownership">Beneficial ownership you have added is less\nthan 51%, you will need to add an additional</string>
+    <string name="Beneficialownership">Beneficial ownership you have added is less\nthan 51%, you will need to add an additional Beneficial Owner until the ownership is 51% or greater.</string>
     <string name="BeneficialOwneruntil">Beneficial Owner until the ownership is</string>
     <string name="percentage">\%</string>
     <string name="greater">greater.</string>
