Merchant Bug Fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -296,7 +296,7 @@
     <string name="dashboard"> Dashboard</string>
     <string name="profile"> Profile</string>
     <string name="quick_menu">Quick Menu</string>
-    <string name="reserverole">Reserve Rule:</string>
+    <string name="reserverole">Reserve Rule: <b>[%] per Sale Order with a 90 day rolling period.</b></string>
     <string name="rollingperiod">rolling period.</string>
     <string name="reserverule"> [%] per Sale Order with a 90 day</string>
     <string name="a_u_pay"> Your active batch is set to automatically pay</string>
