--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -697,4 +697,6 @@
     <string name="gbx_merchant">GreenBox-Merchant</string>
 
     <string name="complete_idve">Please complete your Identity Verification process.</string>
+    <string name="alert">Alert</string>
+    <string name="checkout_cancel_message">Do you want to cancel the Payment.</string>
 </resources>
