Bug fixes in following Camera button click action. while capture a image. Preferences screen adjustment. Agreement proper text.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,7 +179,7 @@
     <string name="bank_acount"><b>Bank Accounts:</b> All Bank account transactions typically take up to 3 business days to process.</string>
     <string name="learn_more1"> <u>Learn More</u></string>
     <string name="learn"><u>Learn More</u></string>
-    <string name="privay_policy"><u>Privay Policy</u></string>
+    <string name="privacy_policy"><u>Privacy Policy</u></string>
     <string name="termsservice"><u> Terms of Service</u></string>
 
     <string name="EST">Eastern (EST)</string>
