Fixed the issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="setupnotnowBtn">Not Now</string>
     <string name="all_done">All Done</string>
     <string name="alldone_success">Your bank account has been successfully authorized and added to your payment \nmethods.</string>
-
+    <string name="merchant_shared_message">Try scanning the code using a Personal coyni account.</string>
     <string name="uploadid">Fill out your information and Upload ID</string>
     <string name="uploadid_cust">Upload ID and fill out your information</string>
     <string name="contentuploadid">Upload and Scan ID: Driver’s License,\nState-Issued ID, or Passport.</string>
