--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -715,5 +715,7 @@
     <string name="scan_canceled">Scan canceled</string>
     <string name="enter_manually">Enter card manually</string>
     <string name="permission_denied">Camera permission denied</string>
-
+    <string name="portalType">Customer</string>
+    <string name="noFeature">Feature not available</string>
+    <string name="errormsg">"We're sorry but this feature is not available in your coyni account. If this is an error, please contact the coyni customer support team."</string>
 </resources>
