Profile Click changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -771,5 +771,5 @@
     <string name="portalType">Customer</string>
     <string name="noFeature">Feature not available</string>
     <string name="errormsg">"We're sorry but this feature is not available in your coyni account. If this is an error, please contact the coyni customer support team."</string>
-    <string name="please_contact_the_coyni_customer_support">please contact the coyni customer support.</string>
+    <string name="please_contact_the_coyni_customer_support">We’re sorry but this feature currently is not available, please wait until we finish your identity verification. If this is an error, please contact the coyni customer support.</string>
 </resources>
