--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,7 +117,8 @@
     <string name="ivunder_review">Thank you for your interest in coyni. Please allow us up to 72 business hours for further review of your account. Within that time you may receive a notification and/or email if further information is needed.</string>
     <string name="ivtitle">Identity Verification Under Review</string>
     <string name="done">Done</string>
-
+    <string name="customer_under_review">Our team is still reviewing your account. This process may take up to 3 business days.</string>
+    <string name="under_review_dispute">Your account is Under Review due to a dispute we have received on your behalf.</string>
     <string name="add_ac">Additional Action Required</string>
     <string name="add_actioncontent">We are unable to match the last 4 digits of your Social Security number.\n \nIn order to continue, please enter your full Social Security Number and click submit.</string>
     <string name="ssnhint">•••-••-••••</string>
