--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -779,4 +779,6 @@
     <string name="password_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?&amp;</string>
     <string name="confirm_routing_number">Confirm Routing Number</string>
     <string name="please_provide_your_bank_account_information_find_your_account_numbers">Please provide your bank account information. Find your account numbers</string>
+    <string name="where_to_find_my_account_information">Where to find my account information?</string>
+    <string name="account_numbers">You can find your routing and account numbers at the bottom of your checks or displayed in your online banking account. On checks, the routing number is typically left of your account number.</string>
 </resources>
