--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -785,4 +785,8 @@
     <string name="our_support_team_is_here_for_you">Our support team is here for you.</string>
     <string name="need_help_with_coyni">Need help with coyni?</string>
     <string name="support_text">&#x2022; Name\n&#x2022; coyni email\n&#x2022;  Account ID number (located in your user details) \n&#x2022; A detailed description of your question, feedback, or issue</string>
+    <string name="bank_information">Bank Information</string>
+    <string name="please_resubmit_a_bank_account"><u>Please Resubmit a Bank Account</u></string>
+    <string name="edit_underline"><u>Edit</u></string>
+    <string name="resubmit">Resubmit Bank Account</string>
 </resources>
