Manual Bank changes Customer flow Paymetn Methods, Buy Tokens & Withdraw Tokens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -790,4 +790,5 @@
     <string name="edit_underline"><u>Edit</u></string>
     <string name="resubmit">Resubmit Bank Account</string>
     <string name="bank_account_added">Bank Account Added</string>
+    <string name="bank_account_failed">Verification Failed</string>
 </resources>
