manual bank change/bug fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -798,5 +798,6 @@
     <string name="select_type_description">Please choose if you want to create a Business or Personal coyni account. You can always create another one later.</string>
     <string name="pp">Privacy Policy.</string>
     <string name="m_agree">Merchant Agreement</string>
+    <string name="trackerbank">No Mail</string>
 
 </resources>
